restyled all pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ h3 {
 .parallax {
     /* The image used */
     /*background-image: url("http://wallpapercave.com/wp/wZR4Saq.jpg");*/
-    background-image: url("/assets/images/color6.jpeg");
+    background-image: url("/assets/images/color1.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -48,7 +48,7 @@ h3 {
 .parallax-2 {
     /* The image used */
     /*background-image: url("https://static.pexels.com/photos/30763/pexels-photo-30763-large.jpg");*/
-    background-image: url("/assets/images/color6.jpeg");
+    background-image: url("/assets/images/office.jpg");
 
     /* Set a specific height 
     height: 100%;
@@ -62,7 +62,7 @@ h3 {
 .parallax-3 {
     /* The image used */
     /*background-image: url("http://www.stemcentrx.com/img/home_science.png");*/
-    background-image: url("/assets/images/color6.jpeg");
+    background-image: url("/assets/images/color1.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -77,7 +77,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");*/
-    background-image: url("/assets/images/color6.jpeg");
+    background-image: url("/assets/images/pixel-photos.jpg");
 
     /* Set a specific height */
     height: 100%;
@@ -92,7 +92,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");*/
-    background-image: url("/assets/images/office.jpg");
+    background-image: url("/assets/images/childEye.jpg");
 
     /* Set a specific height */
     height: 90%;
@@ -106,7 +106,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");*/
-    background-image: url("/assets/images/color6.jpeg");
+    background-image: url("/assets/images/color1.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -122,13 +122,17 @@ h3 {
     height: 150px;
     opacity: .7;
 }
+.form-update-pass {
+    width: 100%;
+
+}
 /*http://www.stemcentrx.com/img/home_science.png*/
 /*http://www.stemcentrx.com/img/clinical-bg.png*/
-#inputEmail {
+/*#inputEmail {
     margin-left: 20px;
     margin-top: 15px;
 
-}
+}*/
 .pipeline-chart {
     margin: 4.875em auto 2.8125em 100px;
     padding: 4.8em 0;
@@ -150,11 +154,12 @@ ul.shortcuts li {
     display: inline-block;
     margin: 0.5em;
 }
-#inputPass {
+/*#inputPass {
     margin-left: 90px;
     margin-top: 15px;
     width: 342px;
-}
+}*/
+
 #priv-policy {
     padding-left: 30px;
     font-size: 15px;
@@ -180,27 +185,27 @@ ul.shortcuts li {
 }
 #treatments-nav-text:hover {
     color: deeppink;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 
 }
 #tools-nav-text:hover {
     color: deeppink;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 
 }
 #howitworks-nav-text:hover {
     color: deeppink;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 
 }
 #resources-nav-text:hover {
     color: deeppink;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 
 }
 #signup-nav-text:hover{
     color: deeppink;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 
 }
 
@@ -214,7 +219,7 @@ ul.shortcuts li {
     color: deeppink;
     border-radius: 7%;
     opacity: 7px;
-    transition: 1s ease-out;
+    transition: .5s ease-out;
 }
 #signup-nav-text {
     background-color: transparent;
@@ -380,7 +385,7 @@ pre {
 
     background-image: url("/assets/images/color.jpeg");
     background-size: cover;
-    height: 60%;
+    height: 70%;
 }
 .jumbotron-my-genetics {
 
@@ -391,20 +396,20 @@ pre {
 }
 .jumbotron-assist-tech {
 
-    background-image: url("/assets/images/color.jpeg");
+    background-image: url("/assets/images/color1.jpeg");
     background-size: cover;
-    height: 60%;
+    height: 70%;
 }
 .jumbotron-whatis {
 
-    background-image: url("/assets/images/color.jpeg");
+    background-image: url("/assets/images/color1.jpeg");
     background-size: cover;
-    height: 60%;
+    height: 70%;
 }
 .jumbotron-clinical-trial {
-    background-image: url('/assets/images/color.jpeg');
+    background-image: url('/assets/images/color1.jpeg');
     background-size: cover;
-    height: 60%;
+    height: 70%;
 }  
 .jumbotron-gene-data {
     background-image: url('/assets/images/color.jpeg');
@@ -439,6 +444,13 @@ pre {
     padding: 5px;
     text-transform: uppercase;
 }
+#wrap-23-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+#twothree-btn {
+}
 .main-h1 {
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 75px;
@@ -452,6 +464,23 @@ pre {
     top: 32%;
     opacity: 0;
      
+}
+.connect23-h1 {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 75px;
+    text-align: center;
+    line-height: 1.3;
+    color: white;
+    width: 100%;
+    font-weight: bold;
+    position: relative;
+    display: block;
+    top: 32%;
+    margin-top: 114px;
+     
+}
+#index-title {
+    color: deeppink;
 }
 .aboutus-h1 {
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -512,6 +541,11 @@ pre {
 #login-h2 {
     padding-top: 50px;
 }
+#signup-h2 {
+    font-size: 40px;
+    padding: 20px;
+    color: deeppink;
+}
 .what-is {
     font-size: 34px;
     /*color: #6e6e6e;*/
@@ -570,6 +604,11 @@ pre {
     font-weight: 300;
     padding-left: 300px;
     padding-right: 300px;
+    background-color: white;
+    border-top-style: solid;
+    border-top-width: 3px;
+    border-top-color: whitesmoke;
+
     /*text-align: left;*/
 
 }
@@ -580,6 +619,9 @@ pre {
     font-weight: 300;
     padding-left: 300px;
     padding-right: 300px;
+    /*border-top-style: solid;
+    border-top-width: 5px;
+    border-top-color: deeppink;*/
     /*text-align: left;*/
 
 }
@@ -631,7 +673,7 @@ color: white;
 /*margin-top: 150px;*/
 /*background-color: white;*/
 /*background: rgba(255, 255, 255, 0.9);*/
-background: url('/assets/images/background4.jpeg');
+background: url('/assets/images/background1.jpeg');
 opacity: 1.3;
 z-index: 7;
 /*position: fixed;*/
@@ -735,7 +777,7 @@ text-align: center;
     color: midnightblue;
 }
 .icon-test {
-    color: blue;
+    color: deeppink;
     padding: 20px;
 }
 .icon-arrow {
@@ -767,7 +809,7 @@ text-align: center;
 .avail-trials-h2 {
     font-size: 38px;
     margin-top: 50px;
-    color: deeppink;
+    color: darkslategray;
 
 }
 
@@ -781,9 +823,9 @@ text-align: center;
 
     /*margin-bottom: 10px;*/
     /*margin-top: 100px;*/
-    /*background-color: whitesmoke;*/
+    background-color: whitesmoke;
     /*background: rgba(255, 255, 255, 0.9);*/
-    background: url('/assets/images/background5.jpeg');
+    background: url('/assets/images/background1.jpeg');
     opacity: 1.2;
     z-index: 7;
     /*border-radius: 50%; */
@@ -801,10 +843,10 @@ text-align: center;
 .avail-header {
     
     /*background: rgba(255, 255, 255, 255);*/
-    background-color: whitesmoke;
+    background-color: white;
     opacity: 1.3;
     z-index: 7;
-    /*background: url('/assets/images/background3.jpeg');*/
+    /*background: url('/assets/images/girleye.jpg');*/
     /*width: 50%;*/
     height: 700px;
     box-sizing: border-box;
@@ -819,7 +861,7 @@ text-align: center;
     z-index: 7;
     /*background: url('/assets/images/background1.jpeg');*/
     /*width: 50%;*/
-    height: 800px;
+    height: 700px;
     box-sizing: border-box;
     z-index: 100;
     color: #433F4E;
@@ -1070,13 +1112,14 @@ text-align: center;
     /*margin-top: 20px;*/
 }
 .intro-clinics {
-    padding: 75px 0;
+    /*padding: 75px 0;*/
     background: white;
     text-align: center;
     /*margin-bottom: 200px;*/
     /*border-radius: 30%;*/
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
+
 #intro-stargardts-defined {
     padding: 75px 0;
     background: transparent;
@@ -1116,6 +1159,35 @@ text-align: center;
    background-color: deeppink;
    border-color: deeppink;
    transition: all 0.3s ease-out;
+}
+#sign-in-buddy {
+    font-size: 22px;
+    /*padding: 38px;*/
+    position: relative;
+    color: white;
+    background-color: deeppink;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+}
+#sign-up-buddy {
+
+}
+#lets-go {
+   font-size: 22px;
+   /*padding: 38px;*/
+   position: relative;
+   color: white;
+   background-color: deeppink;
+   border-color: deeppink;
+   transition: all 0.3s ease-out;
+}
+#lets-go:hover {
+    background-color:  white;
+    color: deeppink;
+    transition: .3s ease-out;
+    border-color: deeppink;
+    border-width: 5px;
+    border-style: solid;
 }
 .starg {
     line-height: 1.7;
@@ -1597,16 +1669,8 @@ ul.dropdown-menu {
     text-decoration: none;
 }
 #a-genesDisease:hover {
-    border-color: deeppink;
-    border-width: 5px;
-    border-style: none none none solid;
-    background-color: deeppink;
-    padding-left: 10px;
-    color: white;
-    text-decoration: none;
-    opacity: .8;
-    transition: all 1s ease-out;
-
+    opacity: .7;
+    border-width: 15px;
 
 }
 #snp-link:hover {
@@ -1656,6 +1720,25 @@ ul.dropdown-menu {
     transition: all 1s ease-out;
 
 
+}
+.amsler-p {
+    line-height: 2;
+    padding: 25 25 25 25px;
+}
+#wrap-amsler-intro {
+    position: relative;
+    padding-left: 60px;
+    padding-top: 60px;
+}
+#wrap-amsler-instructions {
+    position: relative;
+    padding-left: 60px;
+    padding-top: 60px;
+}
+#wrap-amsler-grid {
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 .bigArrow {
   display: block;
@@ -1731,9 +1814,9 @@ padding: 60px;
 #header-passreset-form {
   margin-top: 120px;
 }
-.create-update-form {
+/*.create-update-form {
   width: 500px;
-}
+}*/
 .reset-password-form {
   margin-top: 30px;
   width: 400px;
@@ -1905,6 +1988,8 @@ li,ul{
 }
 #update-pass-form {
     font-size: 22px;
+    border-radius: 5%;
+
 }
 #update-pass-btn {
     float: right;
@@ -1916,32 +2001,45 @@ li,ul{
     background-color: whitesmoke;
     margin-top: 200px;
     padding: 25px;
+    border-radius: 5%;
+    margin-left: 25%;
+    width: 50%;
+
 }
 .login-header .navbar-right {
     margin-right: 0px;
 }
-.wrap-updateinfo {
-    /*display: flex;*/
-    align-content: center;
+#wrap-updateinfo {
+    
     margin-top: 100px;
-    margin-left: 40px;
+    margin-left: 25%;
     background-color: whitesmoke;
     padding: 20px;
+    border-radius: 5%;
 }
 #wrap-contact-support-form {
     background-color: whitesmoke;
-
+    border-radius: 5%;  
+    margin-left: 25%;
 
 }
 #wrap-sign-in-form {
     margin-top: 150px;
     background-color: whitesmoke;
+    padding: 150px;
 
 }
 #contact-support-h2 {
     margin-top: 200px;
 }
-
+.form-login-new {
+    width: 100%;
+}
+.form-signup-new {
+    width: 100%;
+    margin-left: 12px;
+    padding: 20px;
+}
 
 .login-header .nav-tabs > li.active > a,
 .login-header .nav-tabs > li.active > a:focus,
@@ -2067,7 +2165,11 @@ li,ul{
 .form-details {
     padding: 35px 0;
 }
+.form-updateinfo {
+    margin: 0;
+    /*margin-left: 50%;*/
 
+}
 .tab-content .tab-pane {
     padding: 70px 0;
 }
@@ -2172,23 +2274,23 @@ li,ul{
     position: relative;
 }
 .icon-book {
-    color: red;
+    color: deeppink;
     padding: 20px;
 }
 .icon-check {
-    color: mediumseagreen;
+    color: deeppink;
     padding: 20px;
 }
 .icon-comment {
-    color: tomato;
+    color: deeppink;
     padding: 20px;
 }
 .icon-bull {
-    color: khaki;
+    color: deeppink;
     padding: 20px;
 }
 .icon-tasks {
-    color: burlywood;
+    color: deeppink;
     padding: 20px;
 }
 .navi i {
@@ -2305,7 +2407,7 @@ header {
 }
 
 .navbar-default {
-    background-color: #ffffff;
+    background-color: whitesmoke;
     border-color: #ffffff;
 }
 
