--- a/views/account/password.handlebars
+++ b/views/account/password.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
   {{#if error}}
   <div class="alert alert-danger" style="margin-top: 180px">{{error}}</div>
   {{/if}}
@@ -10,7 +10,7 @@
   <div class="wrap-update-pass-form">
   <h2>Update Password</h2>
 
-  <form id="update-pass-form" class="form-horizontal" action="/accounts/password-update" method="POST">
+  <form id="update-pass-form" class="form-horizontal form-update-pass" action="/accounts/password-update" method="POST">
   
     <div class="form-group">
       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
@@ -35,9 +35,6 @@
   </form>
   </div>
   </div>
-  <div class="col-md-6" id="why-register">
-
   
-  </div>
 </div>
 
