--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -1,25 +1,25 @@
 <div class="row">
   <div class="col-md-6" id="wrap-contact-support-form">
   <h2 id="contact-support-h2">Contact Support</h2>
-  <form id="contact-support-form" class="form-horizontal" action="/accounts/password-update" method="POST">
+  <form id="contact-support-form" class="form-horizontal form-contact-support" action="/accounts/password-update" method="POST">
   
     <div class="form-group">
       <label for="name support" class="col-sm-2 control-label">Name</label>
-      {{!-- <div class="col-sm-10"> --}}
+      <div class="col-sm-10">
         <input type="email" class="form-control" id="namesupport" name="name" placeholder="Enter Your Name">
-      {{!-- </div> --}}
+      </div>
     </div>
     <div class="form-group">
       <label for="support email" class="col-sm-2 control-label">Email</label>
-      {{!-- <div class="col-sm-10"> --}}
+      <div class="col-sm-10">
         <input type="email" class="form-control" id="emailsupport" name="emailsupport" placeholder="Email"/>
-      {{!-- </div> --}}
+      </div>
     </div>
     <div class="form-group">
       <label for="text area support" class="col-sm-2 control-label">Message</label>
-      {{!-- <div class="col-sm-10"> --}}
+      <div class="col-sm-10">
         <textarea type="message" class="form-control" id="messagesupport" name="messagesupport" placeholder="Enter your message to support"></textarea>
-      {{!-- </div> --}}
+      </div>
     </div>
   </form>
 
