--- a/views/account/updateinfo.handlebars
+++ b/views/account/updateinfo.handlebars
@@ -1,7 +1,7 @@
-<div class="row">
-  <div class="col-lg-6">
-  <div class="wrap-updateinfo">
+<div class="row"><br>
       <h2 id="header-details-form">UPDATE INFORMATION</h2>
+  <div class="col-lg-6" id="wrap-updateinfo">
+  
 
 
       <form class="form-updateinfo" action="/accounts/update-info" method="post" autocomplete="on">
@@ -117,7 +117,7 @@
         <input type="submit" value="Submit" class="btn btn-default"><br>
 
       </form>
-    </div>
+    
   </div>
 </div>
 
