--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 
          </div>
            
-                <h1 class="main-h1"> <br>Find a retinal disease treatment. 
+                <h1 class="main-h1"> <br>Find a <strong id="index-title">retinal disease treatment.</strong>
                     <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
                 </h1> 
              
@@ -156,19 +156,19 @@
                         
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
-                             <img class="clin-trial-img" src="/assets/images/HumanCell.png">
+                             <img class="clin-trial-img" src="/assets/images/donut2.jpeg">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">DRUG</h2>
-                             <img class="clin-trial-img" src="http://www.iconarchive.com/download/i82458/medicalwp/medical/Syringe-blue.ico">
+                             <img class="clin-trial-img" src="/assets/images/drugBottle.jpeg">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">BIO-TECH</h2>
-                             <img class="clin-trial-img" src="/assets/images/biochemistry.png">
+                             <img class="clin-trial-img" src="/assets/images/magGlass.jpeg">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">GENETIC</h2>
-                             <img class="clin-trial-img" src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/biotech.png">
+                             <img class="clin-trial-img" src="/assets/images/geneladder.jpeg">
                              </div>
                 </header>
             </div>
