--- a/views/tools/amsler_test_page.handlebars
+++ b/views/tools/amsler_test_page.handlebars
@@ -1,25 +1,46 @@
 <div class="row">
   <h1 id="amsler-grid-h1">AMSLER GRID TEST</h1>
 
-  <div class="col-md-12">
+  <div class="col-md-6" id="wrap-amsler-intro">
+  <h1>Overview</h1>
 
-    <p style="margin-top: 40px; margin-left: 80px">The Amsler grid is a tool that eye doctors use to detect vision problems resulting from damage to the macula (the central part of the retina) or the optic nerve.</p>
+    <p class="lead amsler-p">The Amsler grid is a tool that eye doctors use to detect vision problems resulting from damage to the macula (the central part of the retina) or the optic nerve.</p>
 
-    <p style="margin-top: 80px; margin-left: 80px">The damage may be caused by macular degeneration or other eye diseases, so the Amsler grid is useful in detecting these problems.</p>
+    <p class="lead amsler-p">The damage may be caused by macular degeneration or other eye diseases, so the Amsler grid is useful in detecting these problems.</p>
 
-    <p style="margin-top: 80px; margin-left: 80px">An early diagnosis means early treatment, so it may help to limit or at least slow the vision loss you experience.</p>
+    <p class="lead amsler-p">An early diagnosis means early treatment, so it may help to limit or at least slow the vision loss you experience.</p>
 
-    <p style="margin-top: 80px; margin-left: 80px">If you are at risk for macular degeneration or other eye diseases, you can use this chart at home to monitor your vision. But using the chart doesn't mean you should skip regular visits to your eye doctor, because you can easily miss signs that only a trained eye care practitioner will find.</p>
+    <p class="lead amsler-p">If you are at risk for macular degeneration or other eye diseases, you can use this chart at home to monitor your vision. But using the chart doesn't mean you should skip regular visits to your eye doctor, because you can easily miss signs that only a trained eye care practitioner will find.</p>
 
-    <p style="margin-top: 80px; margin-left: 80px">The chart below is an approximation of the printed chart used by eye doctors. For more accurate detection of macular damage, you will need a complete eye exam.</p>
+    <p class="lead amsler-p">The chart below is an approximation of the printed chart used by eye doctors. For more accurate detection of macular damage, you will need a complete eye exam.</p>
+  </div>
+  <div class="col-md-6" id="wrap-amsler-instructions">
+
+  <h1>How to Test Yourself with the Amsler Grid</h1>
+
+  <p class="lead amsler-p">If you need reading glasses, please wear them while you use the Amsler grid. The grid should be at about the same distance from your eyes that any other reading material would be.</p>
+
+
+  <p class="lead amsler-p"><strong>STEP 1. Cover one eye, then focus on the dot in the center</strong></p>
+
+  <p class="lead amsler-p"><strong>STEP 2. Write what you see </strong><br><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Do any of the lines look wavy, blurred or distorted? (All lines should be straight, all intersections should form right angles and all the squares should be the same size.)</p>
+  <p class="lead amsler-p"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Are there any missing areas or dark areas in the grid?</p>
+  <p class="lead amsler-p"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Can you see all corners and sides of the grid?</p>
+  <p class="lead amsler-p"><strong>STEP 3. Test both eyes</strong></p>
+  <p class="lead amsler-p">VERY IMPORTANT: Report any irregularity to your eye doctor immediately.</p>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-10" id="wrap-amsler-grid">
+      <img id="amsler-grid-img" src="/assets/images/amslergrid.png" width="900px" height="900px" />
 
-<div class="row"> 
-  <div class="col-md-6">
-    <img id="amsler-grid-img" src="/assets/images/amslergrid.png"/>
+    </div>
   </div>
-  <div class="col-md-6">
+  <br>
+  <br>
+<div class="row"> 
+  
+  <div class="col-md-9">
   <div class="tabs-container">
       <ul class="nav nav-tabs">
           <li class="active"><a id="new-entry" data-toggle="tab" href="#active_order_categories" aria-expanded="true">New Entry</a>
@@ -81,25 +102,14 @@
           </div>
       </div>
   </div>
-    
+
   </div>
+  
 </div>
 
 
-<h1 id="amsler-grid-h1">How to Test Yourself with the Amsler Grid</h1>
-
-<p style="margin-top: 80px; margin-left: 80px">If you need reading glasses, please wear them while you use the Amsler grid. The grid should be at about the same distance from your eyes that any other reading material would be.</p>
 
 
-<p style="margin-top: 40px; margin-left: 80px">Cover one eye, then focus on the dot in the center.</p>
-
-<p style="margin-top: 40px; margin-left: 80px">Do any of the lines look wavy, blurred or distorted? (All lines should be straight, all intersections should form right angles and all the squares should be the same size.)</p>
-<p style="margin-top: 40px; margin-left: 80px">Are there any missing areas or dark areas in the grid?</p>
-<p style="margin-top: 40px; margin-left: 80px">Can you see all corners and sides of the grid?</p>
-<p style="margin-top: 40px; margin-left: 80px">Don't forget to test both eyes.</p>
-<p style="margin-top: 40px; margin-left: 80px">VERY IMPORTANT: Report any irregularity to your eye doctor immediately.</p>
-
-<p style="margin-top: 40px; margin-left: 80px">You can mark areas of the chart that you're not seeing properly and then bring it with you to your eye exam.</p>
 
 
 
