--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -1,5 +1,5 @@
 <div class="jumbotron-gene-data">
-  <h1 class="main-h1">Connect with 23andMe</h1>
+  <h1 class="connect23-h1">Connect with 23andMe</h1>
 </div>
 <br>
 <br>
@@ -11,7 +11,10 @@
 {{#each genotypes}}
 <h1 style="margin-top: 200px">{{genotypes}}</h1>
 {{/each}}
-
-<a href="/auth"><img src="/assets/images/23andMe.png"/> </a>
+<div class="row">
+  <div class="col-md-12" id="wrap-23-btn">
+    <a id="twothree-btn" href="/auth"><img src="/assets/images/23andMe.png"/> </a>
+  </div>
+</div>
 
 
