--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -7,7 +7,7 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-        <h2>SEE IF YOU QUALIFY</h2>
+        <h2>Retinal Disease Assessment</h2>
         </div>
     </div>
       <img>
@@ -16,23 +16,19 @@
 
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
-    <h2>Retinal Disease Assessment</h2>
+    <h2>YOU CAN ONLY TAKE THE ASSESSMENT ONCE</h2>
       <form method="get" action="/indexOne.html">
         <div class="form-group">
           <div class="panel panel-default">
             <div class="panel-body">
             <p class="lead">
-            By answering the questions in this assessment you will be able to match with life changing clinical trials. 
-
-            The average time to complete this assessment is 2-5 minutes.
-
-           
+            Make sure you have enough time to complete the entire assessment.  The average time to complete this assessment is 2-5 minutes. By answering the questions in this assessment you will be able to match with life changing clinical trials. 
 
             </p>
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Start</button>
+      <button type="submit" id="lets-go" class="btn btn-default">LET'S GO</button>
       </form>
   </div>
 </div>
