--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="cesar-logo" href="/"><img src="/assets/images/cesarcells.jpg" style="height: 40px; width: 75px; margin-bottom: 50px; background-color: tranparent"></a>
+          <a class="navbar-brand" id="cesar-logo" href="/"><img src="/assets/images/logo.jpeg" height="20px" width="200px"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
